[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "facaded-random-forest"
version = "0.2.0"
description = "Multi-backend GPU-accelerated Random Forest with Facade pattern (CUDA, OpenCL, CPU, Hybrid)"
authors = [{name = "Matthew Abbott"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3"]
